--- a/code/app/src/main/res/layout/enhanced_mood_event_with_photo.xml
+++ b/code/app/src/main/res/layout/enhanced_mood_event_with_photo.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/border"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/black"
-    android:descendantFocusability="blocksDescendants"
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -14,8 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:padding="8dp">
 
         <ImageButton
@@ -151,40 +148,40 @@
             android:divider="@android:color/darker_gray"
             android:dividerHeight="1dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@color/black"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="6dp">
-
-            <EditText
-                android:id="@+id/commentEditText"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="Add a comment..."
-                android:inputType="textCapSentences|textMultiLine"
-                android:maxLines="2"
-                android:padding="10dp"
-                android:textColor="#FFFFFF"
-                android:textColorHint="@color/white"
-                android:textSize="14sp" />
-
-            <Button
-                android:id="@+id/commentButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:padding="10dp"
-                android:text="Send"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/black"
-                android:textSize="14sp" />
-        </LinearLayout>
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@color/black"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="6dp">
+
+        <EditText
+            android:id="@+id/commentEditText"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:hint="Add a comment..."
+            android:inputType="textCapSentences|textMultiLine"
+            android:maxLines="2"
+            android:padding="10dp"
+            android:textColor="#FFFFFF"
+            android:textColorHint="@color/white"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/commentButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
+            android:backgroundTint="@color/black"
+            android:padding="10dp"
+            android:text="Send"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+    </LinearLayout>
 </LinearLayout>
