--- a/code/app/src/main/res/layout/activity_user_profile.xml
+++ b/code/app/src/main/res/layout/activity_user_profile.xml
@@ -103,31 +103,38 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
-            android:id="@+id/moodListPicker"
+            android:id="@+id/myProfileSettings"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="vertical" >
 
-            <Button
-                android:id="@+id/myHistoryBtn"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:visibility="gone"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Mood History"
-                android:layout_marginEnd="4dp"
-                android:backgroundTint="@color/unselectedButton"
-                app:cornerRadius="0dp" />
+                android:orientation="horizontal" >
 
-            <Button
-                android:id="@+id/myPersonalJournalBtn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Personal Journal"
-                android:layout_marginRight="4dp"
-                android:backgroundTint="@color/unselectedButton"
-                app:cornerRadius="0dp"  />
+                <Button
+                    android:id="@+id/myHistoryBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Mood History"
+                    android:layout_marginEnd="4dp"
+                    android:backgroundTint="@color/unselectedButton"
+                    app:cornerRadius="0dp" />
+
+                <Button
+                    android:id="@+id/myPersonalJournalBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Personal Journal"
+                    android:layout_marginRight="4dp"
+                    android:backgroundTint="@color/unselectedButton"
+                    app:cornerRadius="0dp"  />
+            </LinearLayout>
 
             <com.example.y.utils.MoodFilterView
                 android:id="@+id/filter"
