--- a/code/app/src/main/res/layout/activity_user_profile.xml
+++ b/code/app/src/main/res/layout/activity_user_profile.xml
@@ -108,7 +108,7 @@
             android:orientation="vertical" >
 
             <LinearLayout
-                android:id="@+id/myProfileSettings"
+                android:id="@+id/moodListPicker"
                 android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
